--- a/style.css
+++ b/style.css
@@ -4,11 +4,16 @@
  
  
  * {
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
     box-sizing: border-box;
+    
     }
+
+html, body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    overflow-x: hidden;
+}
     /* resuable styles and components */
     
     :root {
@@ -58,8 +63,11 @@
         border-radius: var(--spacing-150);
     }
 
-    .spacing-300 {
-        padding: var(--spacing-300) 0;
+    .text-spacing {
+        padding: var(--spacing-150) 0 var(--spacing-150) 0 ;
+    }
+    .spacing-200 {
+        margin-bottom: var(--spacing-200);
     }
     
 /* Attribution Styles */
@@ -79,22 +87,26 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
 
 }
 
 main {
+    background-color: var(--grey-800);
+    min-height: 579px;
+    width: 100%;
+    max-width: 375px;
+    padding: var(--spacing-300);
+    margin: var(--spacing-300);
+    
+    border-radius: var(--spacing-150); 
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 327px;
-    height: 579px;
-    background-color: var(--grey-800);
-    border-radius: var(--spacing-150); 
     
-    margin: var(--spacing-300);
-    padding: var(--spacing-300);
 }
 
 /* main inner content */
@@ -108,7 +120,66 @@ main {
     width: 88px;
 }
 
+.content {
+    text-align: center;
+}
+
 .name {
     color: var(--white);
+}
+
+.location {
+    position: relative;
+    bottom: 0.7rem;
+    color: var(--green)
+}
+
+.description {
+    color: var(--white)
+}
+
+/* links */
+ul {
+    width: 100%;
+}
+li {
+    list-style: none;
+}
+
+.links {
+    background-color: var(--grey-700);
+    color: var(--white);
+    text-decoration: none;
+    
+    padding: var(--spacing-100);
 
 }
+
+/* Button Container */
+
+.buttonContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttons {
+    width: 100%;
+    background-color: var(--grey-700);
+    border-radius: var(--spacing-100);
+
+    border: 0;
+    padding: var(--spacing-150);
+    
+    font: var(--text-preset-2-bold);
+    color: var(--white);
+}
+
+.buttons:hover {
+    background-color: var(--green);
+    color: var(--grey-800);
+}
+
+
